--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,24 @@
   }
 }
 
+.container{
+  width: 100vw;
+  min-height: 100vh;
+}
+
 .App-header {
-  background-color: #282c34;
+ background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
+  gap: 20px;
+  padding: 40px;
+  flex-wrap: wrap;
 }
+
 
 .App-link {
   color: #61dafb;
